# ubervisor

./: Cargo.toml  LICENSE  README.md
ubervisor-core/: Cargo.toml
ubervisor-core/src/: lib.rs
ubervisorctl/: Cargo.toml
ubervisord/: Cargo.toml
ubervisord/examples/: ubervisor.toml
ubervisord/src/: config.rs  main.rs
